--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@babel/core": "7.2.2",
     "@blueprintjs/core": "^3.15.0",
     "@blueprintjs/icons": "^3.7.0",
-    "@svgr/webpack": "4.1.0",
+    "@svgr/webpack": "^4.2.0",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
@@ -57,11 +57,10 @@
     "react-dom": "^16.8.6",
     "react-final-form": "^4.1.0",
     "react-leaflet": "^2.2.1",
-    "react-leaflet-deflate": "^2.2.1",
     "react-leaflet-easyprint": "^2.0.0",
     "react-leaflet-magnifying-glass": "^2.0.0",
+    "react-leaflet-markercluster": "^2.0.0-rc3",
     "react-leaflet-measure": "^2.1.1",
-    "react-leaflet-search": "^0.6.0",
     "react-motion": "^0.5.2",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
