--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-table": "^6.10.0",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
