--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.2.2",
     "@blueprintjs/core": "^3.15.0",
     "@blueprintjs/icons": "^3.7.0",
+    "@blueprintjs/select": "^3.8.0",
     "@svgr/webpack": "^4.2.0",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.14",
